PROJECT(Initd)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

SET(APP_PATH "./build")
MESSAGE(STATUS ${APP_PATH})

MESSAGE(STATUS ${PROJECT_BINARY_DIR})
MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

SET(COMPILER_MODULES "Initd")

IF(COMPILER_MODULES STREQUAL "Initd")
ADD_DEFINITIONS(-DInitD)
ADD_SUBDIRECTORY(init)
ADD_SUBDIRECTORY(property)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/inc)
AUX_SOURCE_DIRECTORY(. MAIN_SRC)
ADD_EXECUTABLE(Initd ${MAIN_SRC})
TARGET_LINK_LIBRARIES(Initd init)
ENDIF()

MESSAGE(STATUS "link executable Initd")
